Chaging the SPA in to a PWA

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,11 +3,6 @@
         "browser": true,
         "es2021": true
     },
-    "settings": {
-        "react": {
-            "version": "detect"
-        }
-    },
     "extends": [
         "eslint:recommended",
         "plugin:react/recommended",
@@ -21,8 +16,7 @@
         "sourceType": "module"
     },
     "plugins": [
-        "react",
-        "react-hooks"
+        "react", "react-hooks"
     ],
     "rules": {
         "react-hooks/rules-of-hooks": "error",
